--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,14 +1,20 @@
   {% extends "layout.html" %}
   {% block body %}
-    {% for score in scores %}
     <h1>Recent Scores</h1>
+    {% for score in scores %}
     <article class="media content-section">
+      <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
       <div class="media-body">
         <div class="article-metadata">
-          <a class="mr-2" href="#">{{ score.author }}</a>
+          <a class="mr-2" href="#">{{ score.author.username }}</a>
+          <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ score.song }}</a></h2>
-        <p class="article-content">{{ score.content }}</p>
+        <h2><a class="article-title" href="{{ url_for('score', score_id=score.id) }}">{{ score.song }}</a></h2>
+        <p class="article-content">
+          Score: {{ score.score }}
+          Letter Grade: {{ score.lettergrade.upper() }}
+          Difficulty: {{ score.type[0].upper() + difficulty }}
+        </p>
       </div>
     </article>
     {% endfor %}
