--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -13,6 +13,9 @@
     <a class="nav-link" href="/about">About</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="/search">Song Leaderboards</a>
+  </li>
+  <li class="nav-item">
     <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
   </li>
 </ul>
@@ -32,9 +35,6 @@
       <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
     </li>
   {% endif %}
-  <li class="nav-item">
-    <a href="/search" class="btn btn-outline-primary" role="button" aria-pressed="true">Song Leaderboards</a>
-  </li>
 </ul>
 </div>
 </nav>
