--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,7 +41,7 @@
       </div>
       <div class="text-muted">
         <small>
-          <a href="#">Forgot Password?</a>
+          <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
         </small>
       </div>
     </form>
