--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -8,10 +8,10 @@
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{{ url_for('user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
+        <a class="mr-2" href="{{ url_for('users.user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
         <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
       </div>
-      <h2><a class="article-title" href="{{ url_for('score', score_id=score.id) }}">{{ score.song }}</a></h2>
+      <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2>
       <p class="article-content">
         Score: {{ score.score }}
         Letter Grade: {{ score.lettergrade.upper() }}
@@ -23,9 +23,9 @@
   {% for page_num in scores.iter_pages(left_edge=1, right_edge=1) %}
     {% if page_num %}
       {% if scores.page == page_num %}
-        <a class="btn btn-info mb-4" href="{{ url_for('user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
+        <a class="btn btn-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
       {% else %}
-        <a class="btn btn-outline-info mb-4" href="{{ url_for('user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
+        <a class="btn btn-outline-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
       {% endif %}
     {% else %}
       ...
