--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
   {% extends "layout.html" %}
   {% block body %}
-    <h1>Scores</h1>
+    <h1>Newest Scores</h1>
     <hr class="my-4">
     {% for score in scores.items %}
     <article class="media content-section">
