--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,31 +3,39 @@
     <h1>Newest Scores</h1>
     <hr class="my-4">
     {% for score in scores.items %}
-    <article class="media content-section">
-      <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
-      <div class="media-body">
-        <div class="article-metadata">
-          <a class="mr-2" href="{{ url_for('users.user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
-          <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
+      <article class="media content-section">
+        <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
+        <div class="media-body">
+          <div class="article-metadata">
+            <a class="mr-2" href="{{ url_for('users.user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
+            <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
+          </div>
+          <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2>
+          <p class="article-content">
+            Score: {{ score.score }}
+            Letter Grade: {{ score.lettergrade.upper() }}
+            Difficulty: {{ score.type[0].upper() + difficulty }}
+          </p>
         </div>
-        <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2>
-        <p class="article-content">
-          Score: {{ score.score }}
-          Letter Grade: {{ score.lettergrade.upper() }}
-          Difficulty: {{ score.type[0].upper() + difficulty }}
-        </p>
-      </div>
-    </article>
+      </article>
     {% endfor %}
-    {% for page_num in scores.iter_pages(left_edge=1, right_edge=1) %}
-      {% if page_num %}
-        {% if scores.page == page_num %}
-          <a class="btn btn-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+    <ul class="pagination">
+      {% for page_num in scores.iter_pages(left_edge=1, right_edge=1) %}
+        {% if page_num %}
+          {% if scores.page == page_num %}
+            <li class="page-item active">
+              <a class="page-link" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+            </li>
+          {% else %}
+            <li class="page-item active">
+              <a class="page-link" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+            </li>
+          {% endif %}
         {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+          <li class="page-item disabled">
+            <a class="btn btn-outline-info mb-4"">...</a>
+          </li>
         {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
+      {% endfor %}
+    </ul>
   {% endblock body %}
