--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 <a class="navbar-brand" href="/">PIU Score Tracker</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
 
-<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+<div class="collapse navbar-collapse" id="navbarColor03">
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
     <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
