Working on user filter, not yet functional

--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -24,7 +24,7 @@
     <td>{{score.stagepass}}</td>
     <td>{{score.platform}}</td>
     <td>{{score.ranked}}</td>
-    <td>{{score.author}}</td>
+    <td>{{score.username}}</td>
   </tr>
   {% endfor %}
 </table>
