--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,7 +5,8 @@
   <h1 style="padding: 10px"><img src="{{ url_for('static', filename='newlogo-arrow-small.png') }}" alt="" />&nbsp&nbspWelcome to Arrow Tracker</h1>
     <p class="lead">
     This is an application meant for PIU players to submit and track their scores easily!
-    Scores can be submitted as either Keyboard/StepF2 or Pad, and an image/screenshot can also be provided as verification.
+    Scores can be submitted as either Keyboard (StepF2) or Pad.
+    Image verification support is planned for the future!
     </p>
     <hr class="my-4">
     <h4>This site currently only supports the PIU XX songlist and scoring!</h4>
