--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" href="/">PIU Score Tracker</a>
+<img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
+<a class="navbar-brand" href="/">Arrow Tracker</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
