--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -32,6 +32,11 @@
           </tbody>
         </table>
       </div>
+      <div>
+        <form action="{{ url_for('scores.delete_score', score_id=score.id) }}" method="POST">
+          <input type="submit" class="btn btn-danger m-1" value="Delete">
+        </form>
+      </div>
     </div>
   </article>
 {% endblock body %}
