--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -13,9 +13,9 @@
   <th>Author</th>
   {% for score in results %}
   <tr>
-    <td><a href="/score/{{score.id}}">{{score.song}}</a>
-      {% if score.id in images %}
-        <span class="badge badge-pill badge-success">Verified!</span>
+    <td><a href="/post/{{score.id}}">{{score.song}}</a>
+      {% if score.image_file %}
+        <span style="padding-left: 5pt"><span class="badge badge-pill badge-success">Verified!</span></span>
       {% endif %}
     </td>
     <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
