--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
   <div class="content-section">
-    <h1>Opps! Page not found! (404)</h1>
+    <h1>Oops! Page not found! (404)</h1>
     <p>That page doesn't exist! Please try another page.</p>
   </div>
 {% endblock body %}
