--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block body %}
   <div class="content-section">
-    <form action="" method="POST">
+    <form action="" method="POST" enctype = "multipart/form-data">
       {{ form.hidden_tag() }}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">New Score</legend>
@@ -115,6 +115,17 @@
             {% endif %}
           </div>
         </div>
+      <div>
+        <hr>
+      </div>
+      <div style="padding: 5pt">
+        <div class="form-row">
+          <div class="custom-file">
+            <input type="file" name="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+            <label class="custom-file-label" for="inputGroupFile01"><span class="span-choose-file">Add Verification Image<span></label>
+          </div>
+        </div>
+      </div>
       </fieldset>
       <div class="form-field">
         {{ form.submit(class="btn btn-outline-success") }}
