--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,11 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
 <a class="navbar-brand" href="/">Arrow Tracker</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
 
-<div class="collapse navbar-collapse" id="navbarColor03">
+<div class="navbar-collapse" id="navbarColor03">
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
     <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
@@ -16,7 +13,7 @@
   <li class="nav-item">
     <a class="nav-link" href="/search">Song Leaderboards</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" style="padding-left: 5px">
     <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
   </li>
 </ul>
