--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta property="og:site_name" content="Arrow Tracker"/>
+    <meta property="og:title" content="Arrow Tracker: The PIU Score Tracker"/>
+    <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
+    <meta property="og:image" content="{{ url_for('static', filename='newlogo-arrow-small.png') }}">
+    <meta property="og:url" content="https://arrowtracker.duckdns.org/">
+    <meta property="og:type" content="organization"/>
     <title>Arrow Tracker</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
