screw it per-page meta tags can wait

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% block head %}{% endblock %}
     <meta charset="utf-8" />
     <meta property="og:site_name" content="Arrow Tracker"/>
+    <meta property="og:title" content="Arrow Tracker: The PIU Score Tracker"/>
+    <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
+    <meta property="og:url" content="https://arrowtracker.duckdns.org/">
     <meta property="og:image" content="{{ url_for('static', filename='newlogo-arrow-small.png') }}">
     <meta property="og:type" content="organization"/>
     <title>Arrow Tracker</title>
