Mobile doesn't look like total crap

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
     <h1>Newest Scores</h1>
     <hr class="my-4">
     {% for score in scores.items %}
-      <article class="media content-section">
+      <article class="media content-section" style="overflow: auto; overflow-x: scroll; max-width: 100%">
         <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
         <div class="media-body">
           <div class="article-metadata">
@@ -16,36 +16,38 @@
             <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2>
           {% endif %}
           <div class="article-content">
-            <table class="table rounded">
-              <thead>
-                <tr>
-                  <th>Difficulty</th>
-                  <th>Letter Grade</th>
-                  <th>Score</th>
-                  <th>Stage Pass</th>
-                  <th>Platform</th>
-                  <th>Ranked?</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
-                  <td>{{score.lettergrade.upper()}}</td>
-                  <td>{{score.score}}</td>
-                  {% if score.stagepass == "True" %}
-                    <td>{{score.stagepass|replace("True", "Yes")}}</td>
-                  {% elif score.stagepass == "False" %}
-                    <td>{{score.stagepass|replace("False", "No")}}</td>
-                  {% endif %}
-                  <td>{{score.platform.capitalize()}}</td>
-                  {% if score.ranked == "True" %}
-                    <td>{{score.ranked|replace("True", "Yes")}}</td>
-                  {% elif score.ranked == "False" %}
-                    <td>{{score.ranked|replace("False", "No")}}</td>
-                  {% endif %}
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Difficulty</th>
+                    <th>Letter Grade</th>
+                    <th>Score</th>
+                    <th>Stage Pass</th>
+                    <th>Platform</th>
+                    <th>Ranked?</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
+                    <td>{{score.lettergrade.upper()}}</td>
+                    <td>{{score.score}}</td>
+                    {% if score.stagepass == "True" %}
+                      <td>{{score.stagepass|replace("True", "Yes")}}</td>
+                    {% elif score.stagepass == "False" %}
+                      <td>{{score.stagepass|replace("False", "No")}}</td>
+                    {% endif %}
+                    <td>{{score.platform.capitalize()}}</td>
+                    {% if score.ranked == "True" %}
+                      <td>{{score.ranked|replace("True", "Yes")}}</td>
+                    {% elif score.ranked == "False" %}
+                      <td>{{score.ranked|replace("False", "No")}}</td>
+                    {% endif %}
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </article>
