--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,6 +8,7 @@
     <meta property="og:url" content="https://arrowtracker.duckdns.org/">
     <meta property="og:image" content="{{ url_for('static', filename='newlogo-arrow-small.png') }}">
     <meta property="og:type" content="organization"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Tracker</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
