--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 {% if not current_user.is_authenticated %}
-<div class="card mx-auto" style="width: 25rem">
+<div class="card mx-auto" style="width: 100%">
   <div class="card-body">
     <h5>It seems you aren't logged in!</h5>
     <p class="card-text">Please log in or create an account to start submitting your scores!</p>
