--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-  <article class="media content-section">
+  <article class="media content-section" style="overflow: auto; max-width: 100%">
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
     <div class="media-body">
       <div class="article-metadata">
@@ -53,11 +53,13 @@
         <img src="{{ url_for('static', filename='score_screenshots/' + score.image_file) }}" class="rounded mx-auto d-block img-fluid">
       </div>
       {% endif %}
+      {% if score.author == current_user %}
       <div>
         <form action="{{ url_for('scores.delete_score', score_id=score.id) }}" method="POST">
           <input type="submit" class="btn btn-danger m-1" value="Delete">
         </form>
       </div>
+      {% endif %}
     </div>
   </article>
 {% endblock body %}
