--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,38 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
-<a class="navbar-brand" href="/">Arrow Tracker</a>
+  <img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
+  <a class="navbar-brand" href="/">Arrow Tracker</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<div class="navbar-collapse" id="navbarColor03">
-<ul class="navbar-nav mr-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/about">About</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/search">Song Leaderboards</a>
-  </li>
-  <li class="nav-item" style="padding-left: 5px">
-    <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
-  </li>
-</ul>
-<ul class="navbar-nav navbar-right">
-  {% if current_user.is_authenticated %}
-    <li class="nav-item">
-      <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
-    </li>
-  {% else %}
-    <li class="nav-item">
-      <a class="nav-link" href="/register">Register<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
-    </li>
-  {% endif %}
-</ul>
-</div>
+  <div class="collapse navbar-collapse" id="navbarColor03">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">Song Leaderboards</a>
+      </li>
+      <li class="nav-item" style="padding-left: 5px">
+        <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav navbar-right">
+      {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
+        </li>
+      {% endif %}
+    </ul>
+  </div>
 </nav>
