Slight navbar restructure

--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -7,6 +7,9 @@
 
   <div class="collapse navbar-collapse" id="navbarColor03">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item" style="padding-right: 5px">
+        <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
@@ -15,9 +18,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
-      </li>
-      <li class="nav-item" style="padding-left: 5px">
-        <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
       </li>
     </ul>
     <ul class="navbar-nav navbar-right">
