--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -17,6 +17,9 @@
         <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/resources">Resources</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
       </li>
     </ul>
