--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -2,38 +2,40 @@
 
 {% block body %}
 <h1 style="padding: 10px">Search Results</h1>
-<table class="table table-striped">
-  <th>Song</th>
-  <th>Difficulty</th>
-  <th>Letter Grade</th>
-  <th>Score</th>
-  <th>Stage Pass</th>
-  <th>Platform</th>
-  <th>Ranked?</th>
-  <th>Author</th>
-  {% for score in results %}
-  <tr>
-    <td><a href="/post/{{score.id}}">{{score.song}}</a>
-      {% if score.image_file != "None" %}
-        <span style="padding-left: 5pt"><span class="badge badge-pill badge-success">Verified!</span></span>
+<div style="overflow: auto; max-width: 100%">
+  <table class="table table-striped">
+    <th>Song</th>
+    <th>Difficulty</th>
+    <th>Letter Grade</th>
+    <th>Score</th>
+    <th>Stage Pass</th>
+    <th>Platform</th>
+    <th>Ranked?</th>
+    <th>Author</th>
+    {% for score in results %}
+    <tr>
+      <td><a href="/post/{{score.id}}">{{score.song}}</a>
+        {% if score.image_file != "None" %}
+          <span style="padding-left: 5pt"><span class="badge badge-pill badge-success">Verified!</span></span>
+        {% endif %}
+      </td>
+      <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
+      <td>{{score.lettergrade.upper()}}</td>
+      <td>{{score.score}}</td>
+      {% if score.stagepass == "True" %}
+        <td>{{score.stagepass|replace("True", "Yes")}}</td>
+      {% elif score.stagepass == "False" %}
+        <td>{{score.stagepass|replace("False", "No")}}</td>
       {% endif %}
-    </td>
-    <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
-    <td>{{score.lettergrade.upper()}}</td>
-    <td>{{score.score}}</td>
-    {% if score.stagepass == "True" %}
-      <td>{{score.stagepass|replace("True", "Yes")}}</td>
-    {% elif score.stagepass == "False" %}
-      <td>{{score.stagepass|replace("False", "No")}}</td>
-    {% endif %}
-    <td>{{score.platform.capitalize()}}</td>
-    {% if score.ranked == "True" %}
-      <td>{{score.ranked|replace("True", "Yes")}}</td>
-    {% elif score.ranked == "False" %}
-      <td>{{score.ranked|replace("False", "No")}}</td>
-    {% endif %}
-    <td>{{score.author.username}}</td>
-  </tr>
-  {% endfor %}
-</table>
+      <td>{{score.platform.capitalize()}}</td>
+      {% if score.ranked == "True" %}
+        <td>{{score.ranked|replace("True", "Yes")}}</td>
+      {% elif score.ranked == "False" %}
+        <td>{{score.ranked|replace("False", "No")}}</td>
+      {% endif %}
+      <td>{{score.author.username}}</td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
