--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -20,6 +20,9 @@
         <a class="nav-link" href="/resources">Resources</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/howto">How To Use</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
       </li>
     </ul>
