--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -21,6 +21,10 @@
         <th>PIU XX Re-rating List</th>
         <td><a href="https://docs.google.com/spreadsheets/d/101BGhr8oaTc-F4D3_s0rep__Wyru3iGHwPWAEhSakbQ">Google Spreadsheet</a></td>
       </tr>
+      <tr>
+        <th>PIU XX Unlocks List</th>
+        <td><a href="https://docs.google.com/spreadsheets/d/1pdZ0NtbrDQpKqyrnkaZfycwqsNS-UNGQWQAaUvdlWyg">Google Spreadsheet</a></td>
+      </tr>
     </table>
 </div>
 {% endblock %}
