--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,4 +1,9 @@
 {% extends 'layout.html' %}
+<head>
+  {% block head %}
+    <title>Dashboard</title>
+  {% endblock %}
+</head>
 {% block body %}
     <div class="media">
       <img class="rounded-circle account-img" src="{{ image_file }}">
