--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+<head>
+  {% block head %}
+    <title>ERROR 404</title>
+  {% endblock %}
+</head>
 {% block body %}
   <div class="content-section">
     <h1>Oops! Page not found! (404)</h1>
