--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+<head>
+  {% block head %}
+    <title>ERROR 500</title>
+  {% endblock %}
+</head>
 {% block body %}
   <div class="content-section">
     <h1>Hey! Why don't you just get up and dance, man? (500)</h1>
