--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,9 @@
   {% extends "layout.html" %}
+  <head>
+    {% block head %}
+      <title>Arrow Tracker</title>
+    {% endblock %}
+  </head>
   {% block body %}
     <h1>Newest Scores</h1>
     <hr class="my-4">
