--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
-
+<head>
+  {% block head %}
+    <title>Search Results</title>
+  {% endblock %}
+</head>
 {% block body %}
 <h1 style="padding: 10px">Search Results</h1>
 <div style="overflow: auto; max-width: 100%">
