--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+<head>
+  {% block head %}
+    <title>ERROR 403</title>
+  {% endblock %}
+</head>
 {% block body %}
   <div class="content-section">
     <h1>Oops! Permissions error! (403)</h1>
