--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -1,4 +1,9 @@
 {% extends 'layout.html' %}
+<head>
+  {% block head %}
+    <title>Post Score</title>
+  {% endblock %}
+</head>
 {% block body %}
   <div class="content-section">
     <form action="" method="POST" enctype = "multipart/form-data">
