--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+<head>
+  {% block head %}
+  {% block title %}<title>{{ score.song }} {{score.type[0].capitalize()}}{{score.difficulty}}</title>{% endblock %}
+  {% endblock %}
+</head>
 {% block body %}
   <article class="media content-section" style="overflow: auto; max-width: 100%">
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
