--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,4 +1,9 @@
 {% extends 'layout.html' %}
+<head>
+  {% block head %}
+    <title>Search</title>
+  {% endblock %}
+</head>
 {% block body %}
   <div class="content-section">
     <form action="" method="POST">
