--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,8 +20,10 @@
             <a class="mr-2" href="{{ url_for('users.user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
             <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
           </div>
-          {% if score.image_file != "None" %}
+          {% if score.image_file != "None" and score.platform == "pad" %}
             <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2><h4><span class="badge badge-success">Verified!</span></h4>
+          {% elif score.image_file != "None" and score.platform != "pad" %}
+            <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2><h4><span class="badge badge-info">Verified SF2!</span></h4>
           {% else %}
             <h2><a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></h2>
           {% endif %}
