--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -19,6 +19,7 @@
     </p>
     <hr class="my-4">
     <h4>This site currently only supports Pump it Up! More games will be coming eventually!</h4>
+    <hr class="my-4">
   <h3>Quick Links</h3>
   <div class="btn-group" role="group" aria-label="Basic example">
     <a href="{{ url_for('scores.new_score') }}" class="btn btn-secondary">Submit Score</a>
