Began work on tournament creation

--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -25,6 +25,15 @@
       <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tournaments
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/tournaments/create">Create</a>
+          <a class="dropdown-item" href="/tournaments/join">Join</a>
+        </div>
+      </li>
     </ul>
     <ul class="navbar-nav navbar-right">
       {% if current_user.is_authenticated %}
