--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -31,7 +31,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/tournaments/create">Create</a>
-          <a class="dropdown-item" href="/tournaments/join">Join</a>
+          <a class="dropdown-item" href="/tournaments/view">View</a>
         </div>
       </li>
     </ul>
