--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -58,7 +58,7 @@
   </div>
   <div class="border-top pt-3">
     <small class="text-muted">
-      Already have an account? <a class="ml-2" href="{{ url_for('users.login') }}">Sign In</a>
+      Need an account? <a class="ml-2" href="{{ url_for('users.register') }}">Register</a>
     </small>
   </div>
 {% endblock body %}
